test/invalid/idl/constructible-global.webidl
[Global, Exposed=YayImGlobal, NamedConstructor()]
interface YayImGlobal {};

[Global, Exposed=YayImGlobal]
interface YayYoureGlobal {
  constructor();
};
